fixed the video page overflow space

--- a/src/Components/MainPage/VideoSection/VideoSection.module.css
+++ b/src/Components/MainPage/VideoSection/VideoSection.module.css
@@ -99,6 +99,7 @@
     font-size: 24px;
     font-weight: 600;
     letter-spacing: 2px;
+    color: white;
 }
 
 .videoText {
